[package]
name = "jsoncanvas"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ambassador = "0.3.6"
hex_color = { version = "3.0.0", features = ["serde"] }
serde = { version = "1.0.197", features = ["derive"] }
url = { version = "2.5.0", features = ["serde"] }

[dev-dependencies]
serde_json = "1.0.114"
